# vfs

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: unit-test-multi-platform.yml
include/: vfs.h
include/vfs/: vfs.h
include/vfs/fs/: localfs.h  memfs.h  nullfs.h  overlayfs.h  randfs.h
include/vfs/inner/: errno.h
include/vfs/utils/: dir.h  file.h
src/: vfs.c  vfs_inner.c  vfs_inner.h  vfs_visitor.c  vfs_visitor.h
src/fs/: localfs.c  memfs.c  memfs.h  nullfs.c  overlayfs.c  randfs.c
src/utils/: atomic.c  atomic.h  defs.h  dir.c  dir.h  errcode.c  errcode.h  file.c  file.h  list.c  list.h  map.c  map.h  mutex.c  mutex.h  path.c  path.h  rwlock.c  rwlock.h  sem.c  sem.h  str.c  str.h  strlist.c  strlist.h  thread.c  thread.h  threadpool.c  threadpool.h
test/: CMakeLists.txt  main.c  test.c  test.h
test/case/: init_and_exit.c  localfs.c  localfs_ls.cpp  localfs_mkdir.c  localfs_mkdir.cpp  localfs_mount.cpp  localfs_read.c  localfs_read.cpp  localfs_rm.cpp  localfs_seek.c  localfs_seek.cpp  localfs_stat.c  localfs_truncate.c  localfs_unlink.c  localfs_unlink.cpp  memfs.c  memfs_stat.c  nullfs.c  overlayfs.c  overlayfs_ls.cpp  overlayfs_mkdir.c  overlayfs_read.c  overlayfs_rmdir.c  overlayfs_stat.c  overlayfs_truncate.c  overlayfs_unlink.c  overlayfs_write.c  randfs.c
test/generic/: __init__.c  __init__.h  check_root.c  mkdir_parent_not_exist.c  mkdir_rmdir_in_root.c  open_as_rdonly_and_write.c  open_as_wronly_and_read.c  open_parent_not_exist.c  open_unlink_in_root.c  rmdir_non_empty.c  rmdir_type_mismatch.c  truncate_larger_and_seek.c  truncate_smaller_and_seek.c  unlink_type_mismatch.c
test/utils/: cwdpath.c  cwdpath.h  exepath.c  exepath.h  file.c  file.h  fsbuilder.c  fsbuilder.h  generic_fs_tester.c  generic_fs_tester.h  overlayfs_builder.c  overlayfs_builder.h
